--- a/index.css
+++ b/index.css
@@ -25,10 +25,10 @@ h2{
 table.a{
 	margin:auto;
 	border-collapse:collapse;
-	background:#d3d3d3;
+	background:#ffffff;
 }
   table.a,th.a,td.a{
-	border:1px solid #000000;
+	border:2px solid #000000;
 }
 
 table.d{
